Fix colors and spacing for promptheaders + banner

--- a/src/components/CommitAIBanner/CommitAIBanner.scss
+++ b/src/components/CommitAIBanner/CommitAIBanner.scss
@@ -5,4 +5,9 @@
   background-color: $Powder-Blue;
   width: 100%;
   padding: 20px;
+  text-align: center;
+}
+
+.commit-ai-banner p {
+  font-size: 1.25rem;
 }
