--- a/src/components/PromptHeader/PromptHeader.scss
+++ b/src/components/PromptHeader/PromptHeader.scss
@@ -1,7 +1,7 @@
 @import '../../styles/partials/variables.scss';
 
 .prompt-header {
-  background-color:$Powder-Blue;
+  background-color:$MVP-Light-Blue;
   display: flex;
   border: 2px solid black;
   width: 100%;
